--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RUGLASS Vidraçaria</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -14,7 +15,7 @@
             <img src="images/logo.png" alt="Logo da RUGLASS Vidraçaria">
         </div>
         <div class="hero-text">
-            <h1>Inovação e Qualidade em Soluções de Vidro e Esquadrias.</h1>
+            <h1>Inovação e Qualidade em Soluções de Vidro.</h1>
             <p>Seu projeto de vidro, do orçamento à instalação, com a garantia que você precisa.</p>
             <div class="cta-container">
                 <a href="https://wa.me/5511947965351?text=Olá!%20Gostaria%20de%20solicitar%20um%20orçamento%20grátis." target="_blank" class="btn btn-laranja">Solicitar Orçamento Grátis</a>
@@ -59,9 +60,9 @@
         <h2>O que Fazemos: Box, Espelhos, Fachadas e Janelas.</h2>
         <div class="servicos-grid">
             <div class="card"><h3>Box para Banheiro</h3><p>Instalação profissional e segura de box em vidro temperado, diversos modelos e acabamentos.</p></div>
-            <div class="card"><h3>Espelhos e Lapidação</h3><p>Espelhos sob medida para decoração, academia e banheiro. Lapidação e bisotê de alta precisão.</p></div>
+            <div class="card"><h3>Espelhos</h3><p>Espelhos sob medida para decoração, academia, banheiro, etc.</p></div>
             <div class="card"><h3>Fachadas e Vitrines</h3><p>Soluções completas para ambientes comerciais. Durabilidade e estética que valorizam seu negócio.</p></div>
-            <div class="card"><h3>Janelas e Portas em Vidro</h3><p>Esquadrias de vidro e alumínio personalizadas, oferecendo isolamento e modernidade.</p></div>
+            <div class="card"><h3>Janelas e Portas em Vidro</h3><p>Esquadrias de vidro e alumínio com modernidade.</p></div>
         </div>
     </section>
 
