Arrumando titulos da galeria de projetos

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 
     <div class="galeria-grid">
         <div class="galeria-item">
-            <img src="images/guardacorpo.jpeg" alt="Projeto de box de banheiro em vidro temperado">
+            <img src="images/guardacorpo.jpeg" alt="Projeto de guarda corpo em vidro temperado">
             <div class="galeria-overlay">
-                <p class="galeria-titulo">Box de Banheiro</p>
+                <p class="galeria-titulo">Guarda Corpo</p>
             </div>
         </div>
 
