--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
 
 <section id="diferenciais" class="secao secao-fundo-claro">
     <h2>Por Que a Ruglass é a Escolha Certa?</h2>
-    <p style="max-width: 800px; margin: 0 auto 30px auto; font-size: 1.1em;">
-        Nossa experiência e compromisso com a excelência.
-    </p>
     
     <div class="servicos-grid">
         
@@ -57,7 +54,7 @@
 </section>
 
     <section id="servicos" class="secao">
-        <h2>O que Fazemos: Box, Espelhos, Fachadas e Janelas.</h2>
+        <h2> Nossos Serviços</h2>
         <div class="servicos-grid">
             <div class="card"><h3>Box para Banheiro</h3><p>Instalação profissional e segura de box em vidro temperado, diversos modelos e acabamentos.</p></div>
             <div class="card"><h3>Espelhos</h3><p>Espelhos sob medida para decoração, academia, banheiro, etc.</p></div>
